<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jemmg.vengexercise.principal"
    tools:showIn="@layout/activity_principal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="363dp"
        android:layout_height="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/ojos"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ojos" />

    <Button
        android:id="@+id/bttnSuerte"
        android:layout_width="102dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/ic_notification_overlay"
        android:onClick="suerte"
        android:text="@string/bttnSuerte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:layout_width="368dp"
        android:layout_height="99dp"
        android:layout_marginBottom="292dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="top|start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bttnEscalon"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_light"
                android:contentDescription="@string/bttnEscalon"
                android:onClick="activar"
                android:text="@string/bttnEscalon"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="8dp"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/bttnFlex"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:contentDescription="@string/bttnFlex"
                android:onClick="activar"
                android:text="@string/bttnFlex"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="922dp"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/bttnTabla"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_purple"
                android:contentDescription="@string/bttnTabla"
                android:onClick="activar"
                android:text="@string/bttnTabla"
                tools:layout_editor_absoluteX="272dp"
                tools:layout_editor_absoluteY="124dp"
                tools:targetApi="lollipop" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bttnSentadilla"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:contentDescription="@string/bttnSentadilla"
                android:enabled="true"
                android:onClick="activar"
                android:text="@string/bttnSentadilla"
                tools:layout_editor_absoluteX="146dp"
                tools:layout_editor_absoluteY="124dp"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/bttnAdbo"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:enabled="true"
                android:onClick="activar"
                android:text="@string/bttnAbdo"
                tools:layout_editor_absoluteX="146dp"
                tools:layout_editor_absoluteY="124dp"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/bttnZancada"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_blue_bright"
                android:onClick="activar"
                android:text="@string/bttnZancada"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="8dp"
                tools:targetApi="lollipop" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/bttnHabilitar"
        android:layout_width="117dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:onClick="habilitar"
        android:text="@string/bttnHabilitar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="142dp"
        android:layout_height="37dp"
        android:layout_marginBottom="236dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif"
        android:text="Repeticiones"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBar2"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="206dp"
        android:layout_height="24dp"
        android:layout_marginBottom="244dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:max="10"
        android:progress="1"
        android:progressBackgroundTint="@color/otrps"
        android:soundEffectsEnabled="true"
        android:textAlignment="textStart"
        android:textDirection="inherit"
        android:thumbTintMode="src_over"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
